--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="imgsize">160dp</dimen>
     <dimen name="icon">24dp</dimen>
+    <dimen name="icon_large">48dp</dimen>
+    <dimen name="icon_next">80dp</dimen>
 </resources>
