--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SiReM"
+            android:text="@string/sirem"
             android:textAlignment="center"
             android:textSize="50sp" />
 
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:hint="Usuario"/>
+                android:hint="@string/usuario"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -42,7 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Contraseña"/>
+                android:hint="@string/contrasena"/>
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
@@ -52,7 +52,7 @@
     android:layout_height="@dimen/icon_next"
     app:fabSize="normal"
     app:srcCompat="@drawable/ic_arrow"
-    app:layout_anchor="@id/botNavLogin"
+    app:layout_anchor="@+id/botNavLogin"
     app:layout_anchorGravity="center_horizontal"
     />
 
