--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,8 @@
        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:padding="@dimen/small">
 
         <TextView
 
@@ -20,12 +21,14 @@
             android:layout_height="wrap_content"
             android:text="@string/sirem"
             android:textAlignment="center"
-            android:textSize="50sp" />
+            android:textSize="@dimen/big"
+            android:layout_marginBottom="@dimen/medium"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/usuario"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/medium">
 
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
