--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#7986cb</color>
+    <color name="colorPrimaryDark">#49599a</color>
+    <color name="colorAccent">#aed581</color>
     <color name="imgbg">#333333</color>
     <color name="icongrey">#555</color>
 </resources>
