--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="icon">24dp</dimen>
     <dimen name="icon_large">48dp</dimen>
     <dimen name="icon_next">80dp</dimen>
+    <dimen name="small">15dp</dimen>
+    <dimen name="medium">20dp</dimen>
+    <dimen name="big">50sp</dimen>
 </resources>
